--- a/build.gradle
+++ b/build.gradle
@@ -1,14 +1,38 @@
-group 'br.com.lotofacilfree'
-version '1.0-SNAPSHOT'
+ext.version = [
+    spring: '1.4.0.RELEASE',
+    junit: '4.11'
+]
+
+buildscript {
+    repositories {
+        mavenCentral()
+    }
+    dependencies {
+        classpath("org.springframework.boot:spring-boot-gradle-plugin:1.4.0.RELEASE")
+    }
+}
 
 apply plugin: 'java'
-
-sourceCompatibility = 1.5
+apply plugin: 'spring-boot'
 
 repositories {
     mavenCentral()
 }
 
 dependencies {
-    testCompile group: 'junit', name: 'junit', version: '4.11'
+    compile group: 'org.springframework.boot', name: 'spring-boot-starter-freemarker', version: '1.4.0.RELEASE'
+
+    testCompile group: 'org.springframework.boot', name: 'spring-boot-starter-test', version: '1.4.0.RELEASE'
+    testCompile group: 'org.hamcrest', name: 'hamcrest-all', version: '1.3'
+
+    testCompile group: 'junit', name: 'junit', version: '4.12'
+}
+
+jar {
+    baseName = 'lotofacilfree'
+    version =  '0.1.0-SNAPSHOT'
+}
+
+task wrapper(type: Wrapper) {
+    gradleVersion = '2.3'
 }
